<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CMRFacultyFeedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_college">College</string>
    <string name="title_activity_rate">Rate</string>
    <string name="title_activity_about">About</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>
    <string name="already_have_account">Already have Account</string>
    <string name="create_acc">Create Account</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="enter_roll_no">Enter Roll No</string>
    <string-array name="yes_no">
        <item>YES</item>
        <item>NO</item>
    </string-array>
    <string-array name="yearspinner">
        <item>IV year</item>
        <item>III year</item>
        <item>II year</item>
        <item>I year</item>
    </string-array>
    <string-array name="branchspinner">
        <item>CSE</item>
        <item>ECE</item>
        <item>MECH</item>
        <item>CIVIL</item>
    </string-array>
    <string-array name="IVspinner">
        <item>LINUX PROGRAMMING</item>
        <item>DESIGN PATTERNS</item>
        <item>CLOUD COMPUTING</item>
        <item>DATA WAREHOUSE AND DATA MINING</item>
        <item>MOBILE COMPUTING</item>
        <item>LP LAB</item>
        <item>DWDM LAB</item>
        <item>INFORMATION RETREIVAL SYSTEM</item>
    </string-array>
    <string-array name="IIIspinner">
        <item>PRINCIPLES OF PROGRAMMING LANGUAGE</item>
        <item>SOFTWARE ENGINEERING</item>
        <item>COMPILER DESIGN</item>
        <item>OPERATING SYSTEMS</item>
        <item>OS LAB</item>
        <item>CD LAB</item>
        <item>COMPUTER NETWORKS</item>
        <item>INTELLECTUAL PROPERTY RIGHTS</item>
    </string-array>
    <string-array name="IIspinner">
        <item>MATHEMATICS-IV</item>
        <item>DATA STRUCTURES THROUGH C++</item>
        <item>MATHEMATICAL FOUNDATIONS OF COMPUTER SCIENCE</item>
        <item>DIGITAL LOGIC DESIGN</item>
        <item>OBJECT ORIENTED PROGRAMMING THROUGH JAVA</item>
        <item>DS LAB</item>
        <item>IT WORKSHOP</item>
        <item>JAVA LAB</item>
        <item>ENVIRONMENTAL STUDIES</item>
    </string-array>
    <string-array name="Ispinner">
        <item>MATHEMATICS-I</item>
        <item>ENGINEERING CHEMISTRY</item>
        <item>ENGINEERING PHYSICS-I</item>
        <item>PROFESSIONAL COMMUNICATION IN ENGLISH</item>
        <item>ENGINEERING MECHANICS</item>
        <item>BASIC ELECTRICAL AND ELECTRONICS</item>
        <item>ENGLISH LAB</item>
        <item>ENGINEERING WORKSHOP</item>
    </string-array>
    <string-array name="sectionspinner">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="remote_sensing_and_gis">REMOTE SENSING AND GIS</string>
    <string name="transportation_engineering_ii">TRANSPORTATION ENGINEERING-II</string>
    <string name="estimation_and_costing">ESTIMATION AND COSTING</string>
    <string name="water_resources_engineering_ii">WATER RESOURCES ENGINEERING-II</string>
    <string name="watershed_management">WATERSHED MANAGEMENT</string>
    <string name="industrial_waste_water_treatment">INDUSTRIAL WASTE WATER TREATMENT</string>
    <string name="chm_lab">CHM LAB</string>
    <string name="ee_lab">EE LAB</string>
    <string name="view_graph">View Graph</string>
    <string name="linux_programming">LINUX PROGRAMMING</string>
    <string name="cloud_computing">CLOUD COMPUTING</string>
    <string name="design_patterns">DESIGN PATTERNS</string>
    <string name="data_warehouse_and_data_mining">DATA WAREHOUSE AND DATA MINING</string>
    <string name="mobile_computing">MOBILE COMPUTING</string>
    <string name="information_retreival_system">INFORMATION RETREIVAL SYSTEM</string>
    <string name="dwdm_lab">DWDM LAB</string>
    <string name="lp_lab">LP LAB</string>
    <string name="management_science">MANAGEMENT SCIENCE</string>
    <string name="microwave_engineering">MICROWAVE ENGINEERING</string>
    <string name="computer_networks">COMPUTER NETWORKS</string>
    <string name="cellular_and_mobile_communications">CELLULAR AND MOBILE COMMUNICATIONS</string>
    <string name="digital_image_processing">DIGITAL IMAGE PROCESSING</string>
    <string name="embedded_systems_design">EMBEDDED SYSTEMS DESIGN</string>
    <string name="acs_lab">ACS LAB</string>
    <string name="medc_lab">MEDC LAB</string>
    <string name="operations_research">OPERATIONS RESEARCH</string>
    <string name="power_plant_engineering">POWER PLANT ENGINEERING</string>
    <string name="cad_or_cam">CAD OR CAM</string>
    <string name="instrumentation_and_control_systems">INSTRUMENTATION AND CONTROL SYSTEMS</string>
    <string name="robotics">ROBOTICS</string>
    <string name="unconventional_machining_processes">UNCONVENTIONAL MACHINING PROCESSES</string>
    <string name="cadm_lab">CADM LAB</string>
    <string name="pdpi_lab">PDPI LAB</string>
    <string name="give_your_rating">Give your Rating</string>
    <string name="usefullness_of_the_experiments_in_clarifying_theoretical_concepts">Usefullness of the experiments in clarifying theoretical concepts</string>
    <string name="all_experiments_in_the_syllabus_are_covered">All experiments in the syllabus are covered</string>
    <string name="usefulness_of_laboratory_instructions">Usefulness of laboratory instructions</string>
    <string name="involvement_of_the_lab_instructors_in_lab_conuct_and_record_correction">Involvement of the lab instructors in lab conuct and record correction</string>
    <string name="fairness_in_lab_viva_and_quiz_conduct">Fairness in lab viva and quiz conduct</string>
    <string name="submit">Submit</string>
    <string name="operations_researchs">Operations Research</string>
    <string name="power_plant_engineer">Power Plant Engineering</string>
    <string name="cad_cam">CAD/CAM</string>
    <string name="instrumentation_and_control_system">Instrumentation and Control Systems</string>
    <string name="robotic">Robotics</string>
    <string name="computer_aided_design_and_manufacturing_lab">Computer Aided Design and Manufacturing Lab</string>
    <string name="linux_program">linux programming</string>
    <string name="design_pattern">design patterns</string>
    <string name="data_warehousing_and_data_mining">Data Warehousing And Data Mining</string>
    <string name="cloud_computin">Cloud Computing</string>
    <string name="linux_programming_lab">Linux Programming Lab</string>
    <string name="data_warehousing_and_data_mining_lab">Data Warehousing And Data Mining lab</string>
    <string name="choose_the_subject">Choose the Subject</string>
    <string name="punctuality_to_the_class">Punctuality to the class</string>
    <string name="communication_skills">Communication Skills</string>
    <string name="use_of_examples">Use of Examples</string>
    <string name="preparation_of_the_teacher">Preparation of the teacher</string>
    <string name="organization_of_the_lecture">Organization of the lecture</string>
    <string name="pace_of_syllabus_coverage">Pace of syllabus Coverage</string>
    <string name="interest_stimulated_by_the_teacher">Interest Stimulated by the teacher</string>
    <string name="application_of_the_topics_covered">Application of the topics covered</string>
    <string name="friendly_interaction_with_students">Friendly Interaction with Students</string>
    <string name="fairness_in_evaluation_of_tests">Fairness in evaluation of tests</string>
    <string name="choose_date">choose date</string>
    <string name="overall_rating">Overall Rating :</string>
    <string name="name_of_the_guest_faculty">Name of the Guest faculty</string>
    <string name="remote_sensing_and_gi">Remote Sensing and GIS</string>
    <string name="transportation_engineer_ii">Transportation Engineering-II</string>
    <string name="estimation_and_costings">Estimation and Costing</string>
    <string name="water_resources_engineer_ii">Water Resources Engineering-II</string>
    <string name="watershed_managements">Watershed Management</string>
    <string name="industrial_waste_water_treatments">Industrial Waste Water Treatment</string>
    <string name="concrete_and_highway_materials_lab">Concrete and Highway Materials Lab</string>
    <string name="environmental_engineering_lab">Environmental Engineering Lab</string>
    <string name="id">Id</string>
    <string name="show">show</string>
    <string name="admin_id">ADMIN ID</string>
    <string name="select_year">Select year</string>
    <string name="select_section">Select section</string>
    <string name="generate_result">Generate Result</string>
    <string name="select_branch">Select Branch</string>
    <string name="management_sciences">Management Science</string>
    <string name="microwave_engineer">Microwave Engineering</string>
    <string name="computer_network">Computer Networks</string>
    <string name="cellular_and_mobile_communication">Cellular and Mobile Communications</string>
    <string name="digital_image_processings">Digital Image Processing</string>
    <string name="embedded_systems_designs">Embedded Systems Design</string>
    <string name="advanced_communication_skills_lab">Advanced Communication Skills Lab</string>
    <string name="microwave_engineering_and_digital_communications_lab">Microwave Engineering and Digital Communications Lab</string>
    <string name="list_of_subjects">List of Subjects:</string>
    <string name="button">Button</string>
    <string name="cse">CSE</string>
    <string name="ece">ECE</string>
    <string name="mech">MECH</string>
    <string name="civil">CIVIL</string>
    <string name="name_of_the_guest_faculties">Name of the Guest Faculty:</string>
    <string name="lecture_topic">Lecture Topic</string>
    <string name="select_date">Select Date</string>
    <string name="topic_of_guest_lecture_was_that_good">Topic of Guest Lecture:Was that good?</string>
    <string name="guest_talk_was_it_understandable">Guest Talk:Was it Understandable?</string>
    <string name="was_the_duration_adequate">Was the duration adequate?</string>
    <string name="do_you_like_to_invite_guest_faculty_on_similar_or_other_topics">Do you like to invite guest faculty on similar or other topics?</string>
    <string name="do_you_like_to_have_further_extension_lecture_on_this_topic">Do you like to have further Extension lecture on this topic?</string>
    <string name="overall_rating_of_the_guest_lecture">Overall rating of the guest lecture</string>
    <string name="submits">SUBMIT</string>
    <string name="any_queries">Any Queries?</string>
    <string name="refer_about_rating_page_in_navigation_or_contact_ankitha_kotha_gmail_com_sowmya_sami904_gmail_com">Refer About Rating page in Navigation OR contact ankitha.kotha@gmail.com,sowmya.sami904@gmail.com</string>
    <string name="note">Note:</string>
    <string name="_1_you_should_not_share_your_password_with_others">1.You should not share your Password with others.</string>
    <string name="_2_in_case_if_you_forget_your_password_click_on_forgot_password_in_login_activity">2.In case if you forget your password click on Forgot Password? in login Activity.</string>
</resources>