<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.win.cmrfacultyfeedback.MechSubjects">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operations_researchs"
        android:id="@+id/or"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_plant_engineer"
        android:id="@+id/ppe"
        android:layout_below="@+id/or"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cad_cam"
        android:id="@+id/cdcm"
        android:layout_below="@+id/ppe"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrumentation_and_control_system"
        android:id="@+id/ics"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cdcm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/robotic"
        android:id="@+id/elective1"
        android:layout_below="@+id/ics"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_computing"
        android:id="@+id/elective2"
        android:layout_below="@+id/elective1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer_aided_design_and_manufacturing_lab"
        android:id="@+id/cadmlab"
        android:layout_below="@+id/elective2"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Production Drawing Practice and Instrumentation lab"
        android:id="@+id/pdpilab"
        android:layout_below="@+id/cadmlab"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_subjects"
        android:id="@+id/textView2"
        android:textColor="#e01313"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/b_es"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pdpilab"
        android:text="@string/button" />
</RelativeLayout>
