<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.win.cmrfacultyfeedback.Rating">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:text="@string/give_your_rating"
                android:textColor="@android:color/black"
                android:textSize="29sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/punctuality_to_the_class"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
            <RatingBar
                android:id="@+id/rate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/communication_skills"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
            <RatingBar
                android:id="@+id/rate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/use_of_examples"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />
            <RatingBar
                android:id="@+id/rate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/preparation_of_the_teacher"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />

            <RatingBar
                android:id="@+id/rate4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/organization_of_the_lecture"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />
            <RatingBar
                android:id="@+id/rate5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t6"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/pace_of_syllabus_coverage"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />
            <RatingBar
                android:id="@+id/rate6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t7"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/interest_stimulated_by_the_teacher"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />
            <RatingBar
                android:id="@+id/rate7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t8"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/application_of_the_topics_covered"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />
            <RatingBar
                android:id="@+id/rate8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t9"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/friendly_interaction_with_students"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />
            <RatingBar
                android:id="@+id/rate9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <TextView
                android:id="@+id/t10"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/fairness_in_evaluation_of_tests"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                />
            <RatingBar
                android:id="@+id/rate10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="1"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:layout_marginLeft="150dp"
                android:layout_marginStart="150dp"
                android:background="@color/colorAccent"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
